# PersonaAgent

./: .env.example  .gitignore  README.md  pyproject.toml
agent_service/: __init__.py  config.py  container.py  dialogue_policy.py  main.py  review.py  schemas.py  workflow.py
bot_client/: __init__.py  agent_api.py  bot_client.py  config.py  echo.py  frame_decoder.py  friend_policy.py  liteim_protocol.py  message_handler.py  message_state.py  protocol_builders.py  protocol_parser.py  runtime.py  supervisor.py
bot_client/agent/: api.py  (+1 more)
scripts/: __init__.py  run_mock_demo.py
tests/: test_agent_workflow.py  test_authorized_style_rag.py  test_bot_client.py  test_chat_api_adapter.py  test_config_and_llm_clients.py  test_cross_language_protocol_contract.py  test_dialogue_policy.py  test_echo_runtime.py  test_embedding_provider.py  test_evaluation_suite.py  test_finalize_reply_command.py  test_generate_reply.py  test_human_review_checkpoint.py  test_import_wechat_style_script.py  test_liteim_protocol.py  test_persona_prompt.py  test_project_layout.py  test_reliability_semantics.py  test_run_bot_client_script.py  test_safety_guard.py  test_step01_foundation.py  test_step02_protocol.py  test_step03_cross_language_contract.py  test_step04_bot_client.py  test_step05_reliability_semantics.py  test_step06_friend_policy.py  test_step07_echo_runtime.py  test_step08_chat_api_adapter.py  test_step09_langgraph_workflow.py  test_step10_dialogue_policy.py  test_step11_human_review_checkpoint.py  test_step12_knowledge_rag.py  test_step13_memory_rag.py  test_step14_governance_consent.py  (+11 more)
(+90 files in other folders)
