[project]
name = "personaagent"
version = "0.1.0"
description = "AI Agent Worker that connects to LiteIM through a Python BotClient and FastAPI AgentService."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
openai = [
    "openai>=1.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_service", "bot_client"]
